--- a/css/media.css
+++ b/css/media.css
@@ -45,10 +45,6 @@
     border-left: 6px solid grey;
     width: 42%;
   }
-footer{
-  bottom:-40% !important;
-}
- 
 }
 
 @media screen and (min-width: 500px) and (max-width: 1100px) {
@@ -107,14 +103,10 @@ footer{
     width: 70%;
     border-left: 10px solid #121c4d;
     padding-left: 2%;
-    margin-top: max(15%, 8vh) !important;
+    margin-top: min(15%, 4vh) !important;
     margin-bottom: 23%;
     animation: show 0.5s forwards;
   }
-
- footer{
-  bottom:-80% !important;
-}
 }
 
 @media screen and (max-width: 500px) {
@@ -174,11 +166,8 @@ footer{
     line-height: 1.5;
     border-left: 10px solid #121c4d;
     padding-left: 2%;
-    margin-top: max(15%, 8vh) !important;
+    margin-top: min(15%, 10vh) !important;
     margin-bottom: 23%;
     animation: show 0.5s forwards;
   }
-footer{
-  bottom:-80% !important;
-}
 }
