--- a/css/media.css
+++ b/css/media.css
@@ -124,8 +124,14 @@
 
   nav ul {
     top: 2% !important;
+    width: 100% !important;
+    margin-left: 0 !important;
+    padding-top: 1.3% !important;
   }
 
+  nav li {
+    padding-left: 10%;
+  }
   main .title {
     margin-left: 5% !important;
     font-size: 1.9rem !important;
