--- a/css/media.css
+++ b/css/media.css
@@ -52,6 +52,19 @@
     border-left: 6px solid grey;
     width: 42%;
   }
+
+  .name {
+    position: absolute;
+    bottom: 7%;
+    background-color: rgb(255, 255, 255);
+    left: 0;
+    padding-left: 4%;
+    padding-top: 2%;
+    border: 1px solid black;
+    right: 15% !important;
+    height: min(5vh, 30px) !important;
+    transition: all 0.5s ease-in;
+  }
 }
 
 @media screen and (min-width: 500px) and (max-width: 1100px) {
@@ -122,6 +135,19 @@
     margin-top: min(15%, 4vh) !important;
     margin-bottom: 23%;
     animation: show 0.5s forwards;
+  }
+
+  .name {
+    position: absolute;
+    bottom: 7%;
+    background-color: rgb(255, 255, 255);
+    left: 0;
+    padding-left: 4%;
+    padding-top: 2%;
+    border: 1px solid black;
+    right: 10% !important;
+    height: max(2vh, 45px) !important;
+    transition: all 0.5s ease-in;
   }
 }
 
@@ -198,5 +224,18 @@
     margin-top: min(15%, 10vh) !important;
     margin-bottom: 23%;
     animation: show 0.5s forwards;
+  }
+
+  .name {
+    position: absolute;
+    bottom: 7%;
+    background-color: rgb(255, 255, 255);
+    left: 0;
+    padding-left: 4%;
+    padding-top: 2%;
+    border: 1px solid black;
+    right: 10% !important;
+    height: max(2vh, 30px) !important;
+    transition: all 0.5s ease-in;
   }
 }
