--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ nav ul {
   position: absolute;
   top: 10%;
   padding-top: 0.8%;
+  padding-bottom: 2% !important;
   right: 0;
   height: min(10vh, 35px) !important;
 }
