--- a/css/style.css
+++ b/css/style.css
@@ -57,10 +57,11 @@ main {
 }
 main .title {
   margin-top: max(13%, 120px);
-  margin-left: 10%;
+  margin-left: 10.5%;
   font-size: 2.4rem;
   font-weight: 100;
   padding-left: 13px;
+  border: none !important;
   width: 42%;
 }
 .description {
