--- a/css/media.css
+++ b/css/media.css
@@ -85,13 +85,10 @@
   }
 
   main .title {
-    margin-left: 0% !important;
-    text-align: center !important;
+    margin-left: min(2%, 34px) !important;
     font-size: 1.9rem !important;
-    margin: 20% auto !important;
     font-weight: 100;
-    padding-left: 0 !important;
-    width: 100%;
+    padding-left: 13px;
     border-left: 6px solid grey;
     width: 72% !important;
   }
@@ -121,12 +118,10 @@
   }
 
   .description {
-    margin-left: 0% !important;
-    margin-top: -20% !important;
+    margin-left: 4% !important;
+    margin-top: 1%;
     background-color: rgb(214, 213, 211);
     width: 50% !important;
-    margin: -20% auto 10% auto !important;
-
     padding: 1% 2% 1% 1%;
     border-left: 10px solid #121c4d;
   }
@@ -160,7 +155,9 @@
   nav ul {
     height: 5vh !important;
   }
-
+  body {
+    background-color: red;
+  }
   nav a {
     text-decoration: none;
     color: rgb(255, 255, 255);
@@ -180,19 +177,16 @@
     padding-left: 10%;
   }
   main .title {
-    margin: 30% auto 0% auto !important;
-    margin-left: auto !important;
-    text-align: center;
+    margin-left: 2% !important;
     font-size: 1.9rem !important;
     font-weight: 100;
-    padding-left: 0 !important;
+    padding-left: 13px;
     border-left: 6px solid grey;
     width: 92% !important;
   }
   .description {
-    margin-left: 8.5% !important;
+    margin-left: 6% !important;
     margin-top: 1%;
-    margin: 0 auto !important;
     background-color: rgb(214, 213, 211);
     width: 60% !important;
     padding: 1% 2% 1% 1%;
